[Fix] Max width of active item when navbar is collapsed
This fixes the max width of the active item when the navbar is collapsed on mobile

--- a/assets/static/style.css
+++ b/assets/static/style.css
@@ -78,6 +78,11 @@ h2 {
 .navbar-dark .navbar-nav .nav-item.active .nav-link {
   border-bottom: 2px solid white;
 }
+@media only screen and (max-device-width: 1198px) {
+  .navbar-dark .navbar-nav .nav-item.active .nav-link {
+  border-bottom: 2px solid #fbfbfb;
+  width:max-content;
+}
 .toc-card {
   width: 18rem;
   margin-bottom: 1rem;
